--- a/learn-more.html
+++ b/learn-more.html
@@ -25,10 +25,47 @@
       </div>
     </header>
 
-    <main class="page">
-      <section class="section">
-        <h1 class="page-title">Mehr erfahren</h1>
-        <p class="muted">Platzhalter für Leistungsübersicht, Prozess, Tech-Stack, Case Studies usw.</p>
+    <main>
+      <!-- Learn More: eigener, aber verwandter Hintergrund + Demo-Fenster vor dem Background -->
+      <section class="learn-hero">
+        <div class="learn-hero-inner">
+          <!-- Demo-Fenster: kleines "Browser"-Mockup mit animiertem Hover-Video (Simulation) -->
+          <div class="demo-window" data-demo>
+            <div class="demo-chrome">
+              <span class="dot red"></span>
+              <span class="dot yellow"></span>
+              <span class="dot green"></span>
+              <div class="demo-url">jaeger-websites.dev/demo</div>
+            </div>
+            <div class="demo-canvas">
+              <nav class="demo-nav">
+                <ul>
+                  <li><span>Home</span></li>
+                  <li><span>About</span></li>
+                  <li><span>Learn&nbsp;More</span></li>
+                </ul>
+                <div class="demo-underline" aria-hidden="true"></div>
+              </nav>
+
+              <div class="demo-content">
+                <div class="placeholder-card"></div>
+                <div class="placeholder-card"></div>
+                <div class="placeholder-card thin"></div>
+              </div>
+
+              <div class="cursor" aria-hidden="true"></div>
+            </div>
+          </div>
+
+          <div class="learn-copy">
+            <h1 class="page-title">Mehr erfahren</h1>
+            <p class="muted">Hier zeigen wir später dein Angebot, Prozess & Tech – unten läuft eine kleine Interaktions-Demo.</p>
+          </div>
+        </div>
+
+        <!-- dekorative Elemente wie auf der Startseite -->
+        <div class="glow glow-a" aria-hidden="true"></div>
+        <div class="glow glow-b" aria-hidden="true"></div>
       </section>
     </main>
 
