--- a/learn-more.html
+++ b/learn-more.html
@@ -54,7 +54,7 @@
                 </div>
               </div>
             </div>
-            <figcaption class="caption"><a class="caption-link" href="#">Erfahre mehr</a></figcaption>
+            <figcaption class="caption"><a class="caption-link" href="#plan-a">Erfahre mehr</a></figcaption>
           </figure>
 
           <!-- Panel B: Hamburger links oben → Seitenleiste mit vertikalen Reitern -->
@@ -88,7 +88,7 @@
                 </div>
               </div>
             </div>
-            <figcaption class="caption"><a class="caption-link" href="#">Erfahre mehr</a></figcaption>
+            <figcaption class="caption"><a class="caption-link" href="#plan-b">Erfahre mehr</a></figcaption>
           </figure>
 
           <!-- Panel C: Pill-Navigation mit gleitendem Indikator -->
@@ -116,7 +116,7 @@
                 </div>
               </div>
             </div>
-            <figcaption class="caption"><a class="caption-link" href="#">Erfahre mehr</a></figcaption>
+            <figcaption class="caption"><a class="caption-link" href="#plan-c">Erfahre mehr</a></figcaption>
           </figure>
         </div>
 
@@ -128,7 +128,7 @@
       <!-- Pläne/Abschnitte unter dem Carousel: jeweils Video links, Text + Preis rechts -->
       <section class="plans">
         <!-- Plan 1: Top-Navigation -->
-        <article class="plan" data-demo="a2">
+        <article class="plan" id="plan-a" data-demo="a2">
           <div class="plan-media">
             <div class="demo-window">
               <div class="demo-chrome">
@@ -156,12 +156,13 @@
             <h2>Klare Top-Navigation</h2>
             <p class="muted">Minimalistische Leiste mit präzisem Hover-Indikator – schnell, verständlich, vertraut.</p>
             <div class="price">500€</div>
+            <a class="btn contact-btn" href="mailto:info@jaeger-websites.dev">Kontakt</a>
             <small class="note">Anpassungen gegen Aufpreis</small>
           </div>
         </article>
 
         <!-- Plan 2: Hamburger + Seitenmenü -->
-        <article class="plan" data-demo="b2">
+        <article class="plan" id="plan-b" data-demo="b2">
           <div class="plan-media">
             <div class="demo-window">
               <div class="demo-chrome">
@@ -193,12 +194,13 @@
             <h2>Seitenmenü für Fokus</h2>
             <p class="muted">Hamburger-Icon öffnet eine fokussierte, vertikale Navigation – perfekt für viele Reiter.</p>
             <div class="price">500€</div>
+            <a class="btn contact-btn" href="mailto:info@jaeger-websites.dev">Kontakt</a>
             <small class="note">Anpassungen gegen Aufpreis</small>
           </div>
         </article>
 
         <!-- Plan 3: Pill-Navigation -->
-        <article class="plan" data-demo="c2">
+        <article class="plan" id="plan-c" data-demo="c2">
           <div class="plan-media">
             <div class="demo-window">
               <div class="demo-chrome">
@@ -226,6 +228,7 @@
             <h2>Tabs als "Pills"</h2>
             <p class="muted">Weiche, kapselartige Tabs mit gleitendem Indikator – modern & touchfreundlich.</p>
             <div class="price">500€</div>
+            <a class="btn contact-btn" href="mailto:info@jaeger-websites.dev">Kontakt</a>
             <small class="note">Anpassungen gegen Aufpreis</small>
           </div>
         </article>
