--- a/learn-more.html
+++ b/learn-more.html
@@ -155,8 +155,10 @@
           <div class="plan-copy">
             <h2>Klare Top-Navigation</h2>
             <p class="muted">Minimalistische Leiste mit präzisem Hover-Indikator – schnell, verständlich, vertraut.</p>
-            <div class="price">500€</div>
-            <a class="btn contact-btn" href="mailto:info@jaeger-websites.dev">Kontakt</a>
+            <div class="cta-col">
+              <div class="price">500€</div>
+              <a class="btn contact-btn" href="about.html#contact-form">Kontakt</a>
+            </div>
             <small class="note">Anpassungen gegen Aufpreis</small>
           </div>
         </article>
@@ -193,8 +195,10 @@
           <div class="plan-copy">
             <h2>Seitenmenü für Fokus</h2>
             <p class="muted">Hamburger-Icon öffnet eine fokussierte, vertikale Navigation – perfekt für viele Reiter.</p>
-            <div class="price">500€</div>
-            <a class="btn contact-btn" href="mailto:info@jaeger-websites.dev">Kontakt</a>
+            <div class="cta-col">
+              <div class="price">500€</div>
+              <a class="btn contact-btn" href="about.html#contact-form">Kontakt</a>
+            </div>
             <small class="note">Anpassungen gegen Aufpreis</small>
           </div>
         </article>
@@ -227,8 +231,10 @@
           <div class="plan-copy">
             <h2>Tabs als "Pills"</h2>
             <p class="muted">Weiche, kapselartige Tabs mit gleitendem Indikator – modern & touchfreundlich.</p>
-            <div class="price">500€</div>
-            <a class="btn contact-btn" href="mailto:info@jaeger-websites.dev">Kontakt</a>
+            <div class="cta-col">
+              <div class="price">500€</div>
+              <a class="btn contact-btn" href="about.html#contact-form">Kontakt</a>
+            </div>
             <small class="note">Anpassungen gegen Aufpreis</small>
           </div>
         </article>
