--- a/learn-more.html
+++ b/learn-more.html
@@ -74,9 +74,8 @@
                   <nav class="side-nav">
                     <ul>
                       <li><span>Home</span></li>
-                      <li><span>Projekte</span></li>
-                      <li><span>Services</span></li>
-                      <li><span>Kontakt</span></li>
+                      <li><span>Learn more</span></li>
+                      <li><span>About us</span></li>
                     </ul>
                     <div class="side-highlight" aria-hidden="true"></div>
                   </nav>
@@ -177,9 +176,8 @@
                   <nav class="side-nav">
                     <ul>
                       <li><span>Home</span></li>
-                      <li><span>Projekte</span></li>
-                      <li><span>Services</span></li>
-                      <li><span>Kontakt</span></li>
+                      <li><span>Learn more</span></li>
+                      <li><span>About us</span></li>
                     </ul>
                     <div class="side-highlight" aria-hidden="true"></div>
                   </nav>
