--- a/learn-more.html
+++ b/learn-more.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Mehr erfahren â€” JÃ¤ger WebSites</title>
+    <title>Mehr erfahren — Jäger WebSites</title>
     <link rel="stylesheet" href="assets/css/style.css" />
     <script defer src="assets/js/main.js"></script>
   </head>
   <body class="theme-dark">
     <header class="site-header" data-header>
       <div class="nav-inner">
-        <a class="brand" href="index.html" aria-label="Startseite">JÃ¤ger <span>WebSites</span></a>
-        <button class="nav-toggle" aria-expanded="false" aria-label="MenÃ¼ Ã¶ffnen" data-toggle>
+        <a class="brand" href="index.html" aria-label="Startseite">Jäger <span>WebSites</span></a>
+        <button class="nav-toggle" aria-expanded="false" aria-label="Menü öffnen" data-toggle>
           <span class="bar"></span><span class="bar"></span><span class="bar"></span>
         </button>
         <nav class="nav" data-nav>
@@ -57,7 +57,7 @@
             <figcaption class="caption"><a class="caption-link" href="#plan-a">Erfahre mehr</a></figcaption>
           </figure>
 
-          <!-- Panel B: Hamburger links oben â†’ Seitenleiste mit vertikalen Reitern -->
+          <!-- Panel B: Hamburger links oben → Seitenleiste mit vertikalen Reitern -->
           <figure class="panel is-right" data-demo="b">
             <div class="demo-window">
               <div class="demo-chrome">
@@ -67,7 +67,7 @@
                 <div class="demo-url">jaeger-websites.dev/menu</div>
               </div>
               <div class="demo-canvas">
-                <button class="hamburger" aria-label="MenÃ¼">
+                <button class="hamburger" aria-label="Menü">
                   <span></span><span></span><span></span>
                 </button>
                 <aside class="side-panel" aria-hidden="true">
@@ -124,7 +124,7 @@
         <div class="glow glow-b" aria-hidden="true"></div>
       </section>
 
-      <!-- PlÃ¤ne/Abschnitte unter dem Carousel: jeweils Video links, Text + Preis rechts -->
+      <!-- Pläne/Abschnitte unter dem Carousel: jeweils Video links, Text + Preis rechts -->
       <section class="plans">
         <!-- Plan 1: Top-Navigation -->
         <article class="plan" id="plan-a" data-demo="a2">
@@ -153,16 +153,16 @@
           </div>
           <div class="plan-copy">
             <h2>Klare Top-Navigation</h2>
-            <p class="muted">Minimalistische Leiste mit prÃ¤zisem Hover-Indikator â€“ schnell, verstÃ¤ndlich, vertraut.</p>
+            <p class="muted">Minimalistische Leiste mit präzisem Hover-Indikator – schnell, verständlich, vertraut.</p>
             <div class="cta-col">
-              <div class="price">500â‚¬</div>
+              <div class="price">500€</div>
               <a class="btn contact-btn" href="about.html#contact-form">Kontakt</a>
             </div>
             <small class="note">Anpassungen gegen Aufpreis</small>
           </div>
         </article>
 
-        <!-- Plan 2: Hamburger + SeitenmenÃ¼ -->
+        <!-- Plan 2: Hamburger + Seitenmenü -->
         <article class="plan" id="plan-b" data-demo="b2">
           <div class="plan-media">
             <div class="demo-window">
@@ -171,7 +171,7 @@
                 <div class="demo-url">jaeger-websites.dev/menu</div>
               </div>
               <div class="demo-canvas">
-                <button class="hamburger" aria-label="MenÃ¼"><span></span><span></span><span></span></button>
+                <button class="hamburger" aria-label="Menü"><span></span><span></span><span></span></button>
                 <aside class="side-panel" aria-hidden="true">
                   <nav class="side-nav">
                     <ul>
@@ -191,10 +191,10 @@
             </div>
           </div>
           <div class="plan-copy">
-            <h2>SeitenmenÃ¼ fÃ¼r Fokus</h2>
-            <p class="muted">Hamburger-Icon Ã¶ffnet eine fokussierte, vertikale Navigation â€“ perfekt fÃ¼r viele Reiter.</p>
+            <h2>Seitenmenü für Fokus</h2>
+            <p class="muted">Hamburger-Icon öffnet eine fokussierte, vertikale Navigation – perfekt für viele Reiter.</p>
             <div class="cta-col">
-              <div class="price">500â‚¬</div>
+              <div class="price">500€</div>
               <a class="btn contact-btn" href="about.html#contact-form">Kontakt</a>
             </div>
             <small class="note">Anpassungen gegen Aufpreis</small>
@@ -228,9 +228,9 @@
           </div>
           <div class="plan-copy">
             <h2>Tabs als "Pills"</h2>
-            <p class="muted">Weiche, kapselartige Tabs mit gleitendem Indikator â€“ modern & touchfreundlich.</p>
+            <p class="muted">Weiche, kapselartige Tabs mit gleitendem Indikator – modern & touchfreundlich.</p>
             <div class="cta-col">
-              <div class="price">500â‚¬</div>
+              <div class="price">500€</div>
               <a class="btn contact-btn" href="about.html#contact-form">Kontakt</a>
             </div>
             <small class="note">Anpassungen gegen Aufpreis</small>
@@ -240,7 +240,7 @@
     </main>
 
     <footer class="site-footer">
-      <small>Â© <span id="year"></span> JÃ¤ger WebSites</small>
+      <small>© <span id="year"></span> Jäger WebSites</small>
     </footer>
   </body>
 </html>
