--- a/learn-more.html
+++ b/learn-more.html
@@ -81,9 +81,9 @@
                   </nav>
                 </aside>
                 <div class="demo-content">
-                  <!-- <div class="placeholder-card"></div>
                   <div class="placeholder-card"></div>
-                  <div class="placeholder-card thin"></div> -->
+                  <div class="placeholder-card"></div>
+                  <div class="placeholder-card thin"></div>
                 </div>
               </div>
             </div>
