--- a/learn-more.html
+++ b/learn-more.html
@@ -67,9 +67,9 @@
                 <div class="demo-url">jaeger-websites.dev/menu</div>
               </div>
               <div class="demo-canvas">
-                <button class="hamburger" aria-label="Menü">
+                <div class="hamburger" aria-label="Menü">
                   <span></span><span></span><span></span>
-                </button>
+                </div>
                 <aside class="side-panel" aria-hidden="true">
                   <nav class="side-nav">
                     <ul>
