--- a/learn-more.html
+++ b/learn-more.html
@@ -171,7 +171,7 @@
                 <div class="demo-url">jaeger-websites.dev/menu</div>
               </div>
               <div class="demo-canvas">
-                <button class="hamburger" aria-label="Menü"><span></span><span></span><span></span></button>
+                <div class="hamburger" aria-label="Menü"><span></span><span></span><span></span></div>
                 <aside class="side-panel" aria-hidden="true">
                   <nav class="side-nav">
                     <ul>
