--- a/learn-more.html
+++ b/learn-more.html
@@ -773,7 +773,7 @@
 
             <nav class="nav" data-nav>
                 <ul>
-                    <li><a href="home.html" data-nav-link>Home</a></li>
+                    <li><a href="index.html" data-nav-link>Home</a></li>
                     <li><a href="learn-more.html" data-nav-link class="active">Learn More</a></li>
                     <li><a href="about.html" data-nav-link>About</a></li>
                 </ul>
