--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 
             <nav class="nav" data-nav>
                 <ul>
-                    <li><a href="home.html" data-nav-link class="active">Home</a></li>
+                    <li><a href="index.html" data-nav-link class="active">Home</a></li>
                     <li><a href="learn-more.html" data-nav-link>Learn More</a></li>
                     <li><a href="about.html" data-nav-link>About</a></li>
                 </ul>
