--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
     <!-- Header -->
     <header class="site-header" data-header>
         <div class="nav-inner">
-            <a class="brand" href="home.html">Jäger <span>WebSites</span></a>
+            <a class="brand" href="index.html">Jäger <span>WebSites</span></a>
             
             <button class="nav-toggle" data-toggle aria-label="Menü öffnen">
                 <span class="bar"></span>
