--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
             --muted: #9aa0a6;
             --line: rgba(255, 255, 255, 0.12);
             --accent: #d1d5db;
-            --focus: #9ae6b4;
-            --error: #ef4444;
             --ease: cubic-bezier(0.215, 0.61, 0.355, 1);
         }
 
@@ -115,19 +113,6 @@
 
         .nav-toggle {
             display: none;
-            position: absolute;
-            left: 20px;
-            width: 44px;
-            height: 44px;
-            border: 1px solid var(--line);
-            background: transparent;
-            border-radius: 12px;
-            cursor: pointer;
-            padding: 10px;
-            z-index: 102;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
         }
 
         .nav-toggle .bar {
@@ -135,19 +120,12 @@
             height: 2px;
             background: var(--text);
             margin: 3px 0;
-            transition: all 0.3s var(--ease);
             display: block;
         }
 
         /* Main Layout */
         main {
             min-height: 100vh;
-        }
-
-        .section {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 40px 20px;
         }
 
         /* Hero Section */
@@ -265,7 +243,7 @@
             color: var(--muted);
         }
 
-        /* Mobile Menu Overlay */
+        /* Mobile Overlay */
         .menu-overlay {
             position: fixed;
             top: 64px;
@@ -274,14 +252,60 @@
             bottom: 0;
             background: rgba(0, 0, 0, 0.7);
             z-index: 98;
-            opacity: 0;
-            visibility: hidden;
-            transition: opacity 0.3s var(--ease), visibility 0.3s var(--ease);
+            display: none;
         }
 
         .menu-overlay.show {
-            opacity: 1;
-            visibility: visible;
+            display: block;
+        }
+
+        /* Mobile Sidebar */
+        .mobile-sidebar {
+            position: fixed;
+            top: 64px;
+            left: 0;
+            bottom: 0;
+            width: 280px;
+            background: #0a0d12;
+            border-right: 1px solid var(--line);
+            transform: translateX(-100%);
+            transition: transform 0.35s var(--ease);
+            z-index: 99;
+            overflow-y: auto;
+            display: none;
+        }
+
+        .mobile-sidebar.show {
+            transform: translateX(0);
+        }
+
+        .mobile-sidebar ul {
+            list-style: none;
+            margin: 0;
+            padding: 24px;
+        }
+
+        .mobile-sidebar li {
+            margin-bottom: 8px;
+        }
+
+        .mobile-sidebar a {
+            display: block;
+            padding: 12px 16px;
+            color: var(--accent);
+            text-decoration: none;
+            font-weight: 600;
+            text-transform: uppercase;
+            font-size: 0.88rem;
+            letter-spacing: 0.04em;
+            border-radius: 8px;
+            transition: all 0.2s var(--ease);
+        }
+
+        .mobile-sidebar a:hover,
+        .mobile-sidebar a.active {
+            background: rgba(255, 255, 255, 0.08);
+            color: var(--text);
         }
 
         /* Mobile Styles */
@@ -297,56 +321,30 @@
 
             .nav-toggle {
                 display: flex;
+                position: absolute;
+                left: 20px;
+                width: 44px;
+                height: 44px;
+                border: 1px solid var(--line);
+                background: transparent;
+                border-radius: 12px;
+                cursor: pointer;
+                padding: 0;
+                align-items: center;
+                justify-content: center;
+                flex-direction: column;
             }
 
             .nav {
-                position: fixed;
-                top: 64px;
-                left: -280px;
-                bottom: 0;
-                width: 280px;
-                background: #0a0d12;
-                border-right: 1px solid var(--line);
-                transition: left 0.35s var(--ease);
-                overflow-y: auto;
-                z-index: 101;
+                display: none;
             }
 
-            .nav.show {
-                left: 0;
-            }
-
-            .nav ul {
-                flex-direction: column;
-                padding: 24px;
-                gap: 8px;
-            }
-
-            .nav a {
+            .mobile-sidebar {
                 display: block;
-                padding: 12px 16px;
-                border-radius: 8px;
-                transition: all 0.2s var(--ease);
-            }
-
-            .nav a:hover,
-            .nav a.active {
-                background: rgba(255, 255, 255, 0.08);
-                color: var(--text);
             }
 
             .nav-underline {
                 display: none;
-            }
-        }
-
-        /* Reduced motion */
-        @media (prefers-reduced-motion: reduce) {
-            .btn,
-            .nav,
-            .nav-toggle .bar,
-            .menu-overlay {
-                transition: none;
             }
         }
     </style>
@@ -355,7 +353,7 @@
     <!-- Header -->
     <header class="site-header">
         <div class="nav-inner">
-            <button class="nav-toggle" id="menuToggle" aria-label="Menü öffnen" aria-expanded="false">
+            <button class="nav-toggle" id="menuToggle" aria-label="Menü öffnen">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -363,7 +361,7 @@
 
             <a class="brand" href="index.html">Jäger <span>WebSites</span></a>
 
-            <nav class="nav" id="mainNav">
+            <nav class="nav">
                 <ul>
                     <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="learn-more.html">Learn More</a></li>
@@ -373,6 +371,15 @@
             </nav>
         </div>
     </header>
+
+    <!-- Mobile Sidebar -->
+    <div class="mobile-sidebar" id="mobileSidebar">
+        <ul>
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="learn-more.html">Learn More</a></li>
+            <li><a href="about.html">About</a></li>
+        </ul>
+    </div>
 
     <!-- Mobile Menu Overlay -->
     <div class="menu-overlay" id="menuOverlay"></div>
@@ -398,35 +405,29 @@
     </footer>
 
     <script>
-        // Set current year
         document.getElementById('year').textContent = new Date().getFullYear();
 
-        // Mobile Menu
         const menuToggle = document.getElementById('menuToggle');
-        const mainNav = document.getElementById('mainNav');
+        const mobileSidebar = document.getElementById('mobileSidebar');
         const menuOverlay = document.getElementById('menuOverlay');
-        const navLinks = mainNav.querySelectorAll('a');
+        const sidebarLinks = mobileSidebar.querySelectorAll('a');
 
         function openMenu() {
-            mainNav.classList.add('show');
+            mobileSidebar.classList.add('show');
             menuOverlay.classList.add('show');
-            menuToggle.setAttribute('aria-expanded', 'true');
             menuToggle.setAttribute('aria-label', 'Menü schließen');
             document.body.style.overflow = 'hidden';
         }
 
         function closeMenu() {
-            mainNav.classList.remove('show');
+            mobileSidebar.classList.remove('show');
             menuOverlay.classList.remove('show');
-            menuToggle.setAttribute('aria-expanded', 'false');
             menuToggle.setAttribute('aria-label', 'Menü öffnen');
             document.body.style.overflow = '';
         }
 
-        menuToggle.addEventListener('click', function(e) {
-            e.preventDefault();
-            e.stopPropagation();
-            const isOpen = mainNav.classList.contains('show');
+        menuToggle.addEventListener('click', function() {
+            const isOpen = mobileSidebar.classList.contains('show');
             if (isOpen) {
                 closeMenu();
             } else {
@@ -436,27 +437,21 @@
 
         menuOverlay.addEventListener('click', closeMenu);
 
-        navLinks.forEach(link => {
-            link.addEventListener('click', function() {
-                if (window.innerWidth <= 900) {
-                    closeMenu();
-                }
-            });
+        sidebarLinks.forEach(link => {
+            link.addEventListener('click', closeMenu);
         });
 
         // Desktop Navigation underline
         if (window.innerWidth > 900) {
             const nav = document.querySelector('.nav');
-            const navLinksAll = document.querySelectorAll('.nav a');
+            const navLinks = document.querySelectorAll('.nav a');
             const underline = document.querySelector('.nav-underline');
             let activeLink = document.querySelector('.nav a.active');
 
             function positionUnderline(link) {
-                if (!underline || !link || window.innerWidth <= 900) return;
-                
+                if (!underline || !link) return;
                 const linkRect = link.getBoundingClientRect();
                 const navRect = nav.querySelector('ul').getBoundingClientRect();
-                
                 underline.style.opacity = '1';
                 underline.style.width = linkRect.width + 'px';
                 underline.style.transform = 'translateX(' + (linkRect.left - navRect.left) + 'px)';
@@ -466,16 +461,12 @@
                 setTimeout(() => positionUnderline(activeLink), 100);
             }
 
-            navLinksAll.forEach(link => {
+            navLinks.forEach(link => {
                 link.addEventListener('mouseenter', () => positionUnderline(link));
             });
 
             nav.addEventListener('mouseleave', () => {
                 if (activeLink) positionUnderline(activeLink);
-            });
-
-            window.addEventListener('resize', () => {
-                if (activeLink && window.innerWidth > 900) positionUnderline(activeLink);
             });
         }
     </script>
